# Data-Weaver

./: .replit  package-lock.json  package.json  pyproject.toml
attached_assets/: Pasted-I-want-to-build-a-full-stack-AI-powered-data-processing_1770783471760.txt  Pasted-The-application-currently-supports-multiple-file-format_1780987402854.txt  Pasted-You-are-a-Senior-Software-Architect-Data-Engineer-and-P_1780988861547.txt
client/: requirements.md
client/src/: index.css
client/src/components/: FileStatsDialog.tsx  UploadZone.tsx
client/src/hooks/: use-files.ts
client/src/pages/: Dashboard.tsx
python/: process.py
server/: routes.ts  storage.ts
server/processed/: processed_1770824839819-475781604-SuperStore Sales DataSet.xlsx  processed_1770824917054-416475475-LoanData.csv  processed_1770826024456-444735679-Input.xlsx - Sheet1.csv  processed_1780988538100-77462441-wine.csv  processed_1780988749512-832087133-magic04.csv  processed_test.csv
shared/: routes.ts  schema.ts
