[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.128.7",
    "moviepy>=2.2.1",
    "nltk>=3.9.2",
    "numpy>=2.4.2",
    "opencv-python>=4.13.0.92",
    "openpyxl>=3.1.5",
    "pandas>=3.0.0",
    "pytesseract>=0.3.13",
    "python-multipart>=0.0.22",
    "scikit-learn>=1.8.0",
    "spacy>=3.8.11",
    "uvicorn>=0.40.0",
]
